--- a/source/455.AssignCookies.md
+++ b/source/455.AssignCookies.md
@@ -1,4 +1,4 @@
-
+## solution1
 
 ``` C++
 class Solution {
@@ -17,6 +17,23 @@ public:
             }
         }
         return count;
+    }
+};
+
+```
+
+## solution2
+
+``` C++
+class Solution {
+public:
+    int findContentChildren(vector<int>& g, vector<int>& s) {
+        sort(g.begin(), g.end());
+        sort(s.begin(), s.end());
+        int i =0;
+        for(int j =0;i<g.size()&& j<s.size();j++)
+            i += g[i]<=s[j];
+        return i;
     }
 };
 
