add DP solution

--- a/source/devide-and-conquer/903.ValidPermutationsforDISequence.md
+++ b/source/devide-and-conquer/903.ValidPermutationsforDISequence.md
@@ -1,6 +1,27 @@
 
 ## 1. C++ STL partial_sum
 
+以 S = "DID"为例
+
+1. c = 'D'
+
+d =1, i = 0，反向遍历，从最后一个元素到第二个元素，进行pairtial_sum
+
+[1,1,1,1] ==> [1,3,2,1]
+
+2. c = 'I'
+
+d = 1, i = 1, 正向遍历，从第二个元素到倒数第二个元素，进行partial_sum
+
+[1,3,2,1] ==> [1,2,5,1]
+
+3. c = 'D'
+
+d = 2, i = 1, 反向遍历，此时只剩一个元素了，那就是p[2]，还是等于5
+
+4. 返回值，返回p[2]， 那就是5..
+
+
 ``` C++
 class Solution {
 public:
@@ -23,5 +44,64 @@ public:
         return *(arr.begin() + d);
     }
 };
+
+```
+
+
+## 2.DP Solution
+
+[reference](https://leetcode.com/problems/valid-permutations-for-di-sequence/discuss/168278/C%2B%2BJavaPython-DP-Solution-O(N2))
+
+也以S = "DID"为例， 则排列的集中为[1,2,3,4]
+
+dp[i]表示前i个数字的排列
+dp[i][j]表示 在对前i个数字排列之上，加上限制，j 表示剩余还没排列的几个中第i小的数字(0表示最小).
+
+所以
+1. 第一位：
+
+dp[0] 表示第0位可以排列的数字，当时就是有4中，为1,2,3,4都可以.dp[0] = 4
+dp[0][0] 表示在0为 并且是[1,2,3,4]集合中最小的数字，那就只有1了， 
+
+所以dp[0][0] = 1, 
+同理 dp[0][3]= dp[0][2] = dp[0][1] = 1.
+
+2. 第二位
+
+降序
+
+由于S[0] = 'D'，表示降序，所以dp[1] = 6, 组合可以为（43,42,41,32,31,21）
+dp[1][0] = (41,31,21)
+
+dp[1][1] = (42, 43)
+
+3.第三位
+
+dp[2] = 5+3 = 8 (413,314,214,423, 324) + (412, 312, 213).
+
+4. 第四位
+
+降序，就只剩下步骤3中的 5中可能了.
+
+
+
+
+
+
+
+``` C++
+    int numPermsDISequence(string S) {
+        int n = S.length(), mod = 1e9 + 7;
+        vector<vector<int>> dp(n + 1, vector<int>(n + 1));
+        for (int j = 0; j <= n; j++) dp[0][j] = 1;
+        for (int i = 0; i < n; i++)
+            if (S[i] == 'I')
+                for (int j = 0, cur = 0; j < n - i; j++)
+                    dp[i + 1][j] = cur = (cur + dp[i][j]) % mod;
+            else
+                for (int j = n - i - 1, cur = 0; j >= 0; j--)
+                    dp[i + 1][j] = cur = (cur + dp[i][j + 1]) % mod;
+        return dp[n][0];
+    }
 
 ```
